--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -27,7 +27,7 @@
             <div class="service-description-container">
                 <a href="" ui-sref="servicio({service: 'design'})"><h3>Diseño Gráfico</h3></a>
                 <p class="paragraph">
-                    En B-markt, sabemos que comunicar la personalidad de una marca gráficamente es una tarea que debe ser gestionada cuidadosamente. Conocer y explotar el potencial del mensaje que se desea comunicar, es la tarea del equipo especialista que desarrolla tus conceptos en: identidad corporativa (logotipo y marca), papelería, cartelería, expresiones editoriales, diseño publicitario y web. <a href="" ui-sref="service({service: 'design'})" ><i>ver más...</i></a>
+                    En B-markt, sabemos que comunicar la personalidad de una marca gráficamente es una tarea que debe ser gestionada cuidadosamente. Conocer y explotar el potencial del mensaje que se desea comunicar, es la tarea del equipo especialista que desarrolla tus conceptos en: identidad corporativa (logotipo y marca), papelería, cartelería, expresiones editoriales, diseño publicitario y web. <a href="" ui-sref="servicio({service: 'design'})"><i>ver más...</i></a>
                 </p>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="service-description-container">
                 <a href="" ui-sref="servicio({service: 'development'})"><h3>Desarrollo Web</h3></a>
                 <p class="paragraph">
-                    La tecnología está a tu alcance y hacerla a un lado no es una opción. Porque el crecimiento de tu negocio se basa en la rapidez de gestión, creemos que la optimización y automatización de procesos mediante nuestros softwares son la solución práctica para potenciarte en el mercado. Estas soluciones son: sistemas de inventario, de contabilidad, páginas web, aplicaciones móviles, y plataformas de comercio electrónico. <a href="" ui-sref="service({service: 'development'})" ><i>ver más...</i></a>
+                    La tecnología está a tu alcance y hacerla a un lado no es una opción. Porque el crecimiento de tu negocio se basa en la rapidez de gestión, creemos que la optimización y automatización de procesos mediante nuestros softwares son la solución práctica para potenciarte en el mercado. Estas soluciones son: sistemas de inventario, de contabilidad, páginas web, aplicaciones móviles, y plataformas de comercio electrónico. <a href="" ui-sref="servicio({service: 'development'})"><i>ver más...</i></a>
                 </p>
             </div>
         </div>
@@ -57,9 +57,9 @@
     <div class="wedo-wrapper">
         <div class="service-description">
             <div class="service-description-container">
-                <a href="" ui-sref="service({service: 'marketing'})"><h3>Marketing Digital</h3></a>
+                <a href="" ui-sref="servicio({service: 'marketing'})"><h3>Marketing Digital</h3></a>
                 <p class="paragraph">
-                    En Bmarkt creemos que establecer relaciones de valor duraderas entre el cliente y la empresa es vital para el éxito empresarial. Esto es posible mediante el conocimiento sistemático del cliente y por las herramientas digitales que se facilitan: investigaciones de mercado digital, dirección y organización de campañas de comunicación, posicionamiento de sitios web SEO y SEM, CRM, y Social Media. <a href="" ui-sref="service({service: 'marketing'})" ><i>ver más...</i></a>
+                    En Bmarkt creemos que establecer relaciones de valor duraderas entre el cliente y la empresa es vital para el éxito empresarial. Esto es posible mediante el conocimiento sistemático del cliente y por las herramientas digitales que se facilitan: investigaciones de mercado digital, dirección y organización de campañas de comunicación, posicionamiento de sitios web SEO y SEM, CRM, y Social Media. <a href="" ui-sref="servicio({service: 'marketing'})"><i>ver más...</i></a>
                 </p>
             </div>
         </div>
@@ -74,14 +74,14 @@
         <figure class="wedo-fig ribon-right">
             <img class="lazy wedo-fig_img" data-original="res/img/services-home/arquitect2.png" alt="Architecture">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'architecture'})"></a>
-            </figcaption>s
+                <a href="" ui-sref="servicio({service: 'marketing'})"></a>
+            </figcaption>
         </figure>
         <div class="service-description">
             <div class="service-description-container">
-                <a href="" ui-sref="service({service: 'architecture'})"><h3>Arquitectura</h3></a>
+                <a href="" ui-sref="servicio({service: 'architecture'})"><h3>Arquitectura</h3></a>
                 <p class="paragraph">
-                    Conocemos la importancia de satisfacer las necesidades de infraestructura, para el desarrollo laboral, personal y familiar en la sociedad, a través de servicios integrales de arquitectura, generando espacios inteligentes, confortables y visualmente agradables, fieles a las preferencias y necesidades del cliente. <a href="" ui-sref="service({service: 'architecture'})" ><i>ver más...</i></a>
+                    Conocemos la importancia de satisfacer las necesidades de infraestructura, para el desarrollo laboral, personal y familiar en la sociedad, a través de servicios integrales de arquitectura, generando espacios inteligentes, confortables y visualmente agradables, fieles a las preferencias y necesidades del cliente. <a href="" ui-sref="servicio({service: 'architecture'})"><i>ver más...</i></a>
                 </p>
             </div>
         </div>
