--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -66,7 +66,7 @@
         <figure class="wedo-fig ribon-left">
             <img class="lazy wedo-fig_img" data-original="res/img/services-home/marketing1.png" alt="Marketing">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'marketing'})"></a>
+                <a href="" ui-sref="servicio({service: 'marketing'})"></a>
             </figcaption>
         </figure>        
     </div>
@@ -74,7 +74,7 @@
         <figure class="wedo-fig ribon-right">
             <img class="lazy wedo-fig_img" data-original="res/img/services-home/arquitect2.png" alt="Architecture">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="servicio({service: 'marketing'})"></a>
+                <a href="" ui-sref="servicio({service: 'architecture'})"></a>
             </figcaption>
         </figure>
         <div class="service-description">
