--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -5,7 +5,7 @@
     <div class="footer-container">            
         <div class="footer-content">
             <div class="logo-icon">
-                <img src="res/img/logo-footer.png" alt="">
+                <img src="res/img/logo-footer.png" alt="footer logo">
             </div>
             <div class="footer-nav">                
                 <a ui-sref="/" ui-sref-active="active" class="active">Inicio</a>
@@ -21,7 +21,7 @@
                 <div class="map-btn map-toggler_open">VER MAPA</div>
             </div>
             <div class="social">
-                <a href="/bmarkt.studio" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/bmarkt.studio/" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-instagram " aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-linkedin " aria-hidden="true"></i></a>
