--- a/public/partials/common/header.html
+++ b/public/partials/common/header.html
@@ -1,8 +1,8 @@
 <header class="header">
     <div class="header-container">
         <a class="logo-link" href="/">
-            <img class="logo" src="res/img/logoFull.png" alt="logo"></img>
-            <img class="logo-mobile" src="res/img/icon.png" alt="logo"></img>
+            <img class="logo" src="res/img/logoFull.png" alt="logo header"></img>
+            <img class="logo-mobile" src="res/img/icon.png" alt="logo header mobile"></img>
         </a>
         <div class="menu-wrapper">
             <div class="hamburger"></div>
