--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,5 +1,5 @@
 <div class="banner">
-    <img class="lazy" data-original="res/img/banner.png" alt="banner">
+    <img class="lazy" data-original="res/img/banner.png" alt="banner home">
     <!--<div class="row-content row-content_medium row-elements_between flex-center">
         
         <h1>MAKE...<br> <span class="typing"></span></h1>
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="about row-content row-content_medium row-content_column row-content-center_vertical">
 
-        <img class="lazy banner-team" data-original="res/img/Banner2.png" alt="banner">
+        <img class="lazy banner-team" data-original="res/img/Banner2.png" alt="banner team">
     <!--    <div class="logo-red-ball"></div>
         <hr>
         <p class="info-text text-center">
