--- a/src/scss/layouts/_contact.scss
+++ b/src/scss/layouts/_contact.scss
@@ -10,7 +10,10 @@
     .form-input {
         border: 1px solid #ccc;
         border-radius: 6px;
-    }
+    }/*
+    .form-input:active {
+        box-shadow: 0 0 2px 2px blue;
+    }*/
 }
 
 
