--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -1,11 +1,11 @@
 <div class="service-wrapper">
 	<div class="service">
-		<a ui-sref="servicio({service: 'design'})" class="services-container">
+		<a ui-sref="servicio({service: 'diseno-grafico'})" class="services-container">
 			<h3>DISEÑO</h3>
 		</a>
 	</div>
 	<div class="service">
-		<a ui-sref="servicio({service: 'development'})" class="services-container">
+		<a ui-sref="servicio({service: 'desarrollo-web'})" class="services-container">
 			<h3>DESARROLLO</h3>
 		</a>
 	</div>
@@ -15,7 +15,7 @@
 		</a>
 	</div>
 	<div class="service">
-		<a ui-sref="servicio({service: 'architecture'})" class="services-container">
+		<a ui-sref="servicio({service: 'arquitectura'})" class="services-container">
 			<h3>ARQUITECTURA</h3>
 		</a>
 	</div>
