servicios segun su respectivo nombre

--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -1,12 +1,12 @@
 <div class="service-wrapper">
 	<div class="service">
 		<a ui-sref="servicio({service: 'diseno-grafico'})" class="services-container">
-			<h3>DISEÑO</h3>
+			<h3>DISEÑO GRAFICO</h3>
 		</a>
 	</div>
 	<div class="service">
 		<a ui-sref="servicio({service: 'desarrollo-web'})" class="services-container">
-			<h3>DESARROLLO</h3>
+			<h3>DESARROLLO WEB</h3>
 		</a>
 	</div>
 	<div class="hello service">
