seo title, descriptio, keywods

--- a/public/partials/common/header.html
+++ b/public/partials/common/header.html
@@ -9,9 +9,9 @@
         </div>
         <nav class="navbar">
             <a class="link" ui-sref="/" ui-sref-active="active">Inicio</a>
-            <a class="link" ui-sref="servicios" ui-sref-active="active">Servicios</a>
-            <a class="link" ui-sref="portafolio" ui-sref-active="active">Portafolio</a>
-            <a class="link" ui-sref="contacto" ui-sref-active="active">Contacto</a>
+            <a class="link" ui-sref="#/servicios" ui-sref-active="active">Servicios</a>
+            <a class="link" ui-sref="#/portafolio" ui-sref-active="active">Portafolio</a>
+            <a class="link" ui-sref="#/contacto" ui-sref-active="active">Contacto</a>
             <i class="fa fa-globe nav-link" aria-hidden="true"></i>
         </nav>
     </div>
