enlaces hash en el footer

--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -9,9 +9,9 @@
             </div>
             <div class="footer-nav">                
                 <a ui-sref="/" ui-sref-active="active" class="active">Inicio</a>
-                <a ui-sref="servicios" ui-sref-active="active">Servicios</a>
-                <a ui-sref="portafolio" ui-sref-active="active">Portafolio</a>
-                <a ui-sref="contacto" ui-sref-active="active">Contacto</a>
+                <a ui-sref="#/servicios" ui-sref-active="active">Servicios</a>
+                <a ui-sref="#/portafolio" ui-sref-active="active">Portafolio</a>
+                <a ui-sref="#/contacto" ui-sref-active="active">Contacto</a>
             </div>
             <div class="contact-info">
                 <span><i class="fa fa-envelope-o" aria-hidden="true"></i>contacto@bmarkt.studio</span>
