css min assets plugins and libraries

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,9 @@
 /***************************************\
+            LIBRARIES n PLUGINS
+\***************************************/
+@import 'assets/_font-awesome.min.scss';
+@import 'assets/_jquery.bxslider.min.scss';
+/***************************************\
             FRAMEWORK PARTIALS
 \***************************************/
 @import 'framework/_normalize.scss';
