--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <!--<span class="map-toggler_open"> <i class="fa fa-map" aria-hidden="true"></i> </span>-->
     <span class="map-toggler_close" style="display: none"> <i class="fa fa-map" aria-hidden="true"></i> </span>
-    <!--<iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d1296.8042740418107!2d-86.35661010025788!3d13.097823473313829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d13.0980063!2d-86.356329!5e0!3m2!1sen!2s!4v1485989122647" allowfullscreen></iframe>-->
+    <iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d1296.8042740418107!2d-86.35661010025788!3d13.097823473313829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d13.0980063!2d-86.356329!5e0!3m2!1sen!2s!4v1485989122647" allowfullscreen></iframe>
     <div class="footer-container">            
         <div class="footer-content">
             <div class="logo-icon">
@@ -16,7 +16,7 @@
             <div class="contact-info">
                 <span><i class="fa fa-envelope-o" aria-hidden="true"></i>contacto@bmarkt.studio</span>
                 <span><i class="fa fa-mobile-phone fa-lg" aria-hidden="true"></i>(+505) 8853 9870</span>
-                <span><i class="fa fa-map-marker acomodate" aria-hidden="true"></i><p>Supermercado la colonia 5 1/2 cuadras norte</p></span>
+                <span><i class="fa fa-map-marker acomodate" aria-hidden="true"></i><p>Semáforo viejo 1 1/2 cuadras norte</p></span>
                 <span><i class="fa fa-globe" aria-hidden="true"></i> Estelí - Nicaragua</span>
                 <div class="map-btn map-toggler_open">VER MAPA</div>
             </div>
