--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -21,7 +21,7 @@
                 <div class="map-btn map-toggler_open">VER MAPA</div>
             </div>
             <div class="social">
-                <a href="https://www.facebook.com/bmarkt.studio/" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a target="_blank" href="https://www.facebook.com/bmarkt.studio.nic/" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-instagram " aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-linkedin " aria-hidden="true"></i></a>
