trabajando portafolio may 24

--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -19,8 +19,8 @@
 			</figure>-->
 			<figure class="element-item branding">
 			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logofu.png" alt="img-porfolio">
-			  <a data-ui-sref="trabajo({work: 'fu'})" class="element-info">
-			  	<p>Familias Unidas</p>
+			  <a data-ui-sref="trabajo({work: 'campana-contra-la-esci'})" class="element-info">
+			  	<p>Campaña contra la ESCI</p>
 			  </a>
 			</figure>
 			<figure class="modal-project element-item design">
@@ -59,7 +59,7 @@
 			  	<p>UNAN</p>
 			  </figcaption>
 			</figure>
-			<figure class="modal-project element-item design">
+			<figure class="modal-project element-item branding">
 			  <img src="res/img/portfolio/diseno/logos/youralsguide/your-als-guide-logo.jpg" alt="img-porfolio">
 			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'your-als-guide'})">
 			  	<p>Your ALS Guide</p>
