--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -2569,8 +2569,26 @@ $bg-color-dark:;
 @font-face {
   font-family: 'montserrat';
   src: url("../fonts/Montserrat-Regular.ttf") format("truetype"); }
+@font-face {
+  font-family: 'montserrat-bold';
+  src: url("../fonts/Montserrat-Bold.ttf") format("truetype"); }
 .text-center {
   text-align: center; }
+
+.title-mb {
+  font-family: 'montserrat-bold';
+  font-size: 4em;
+  margin-top: 2rem; }
+
+.montserrat {
+  font-family: 'montserrat';
+  font-size: 1.1em;
+  color: #aaa;
+  letter-spacing: 1px;
+  margin-bottom: 3rem; }
+
+.mont {
+  font-family: 'montserrat'; }
 
 .paragraph {
   font-size: 16px;
@@ -2725,10 +2743,10 @@ main {
 
 .form-group {
   width: 100%;
-  margin-bottom: 20px; }
+  margin-bottom: 35px; }
 
 .form-input {
-  width: calc(100% - 32px);
+  width: 100%;
   box-shadow: none;
   outline: none;
   border: none;
@@ -3337,24 +3355,72 @@ img.portImg, div.bx-wrapper {
   padding-top: 3rem;
   padding-bottom: 7rem; }
 
+.contact-wrapp {
+  width: 90%; }
+
 .contact-form {
-  width: 65%;
+  width: 100%;
   padding: 1rem 2rem;
- /*
-.form-input:active {
-    box-shadow: 0 0 2px 2px blue;
-}*/ }
+  /*
+  .form-input:active {
+      box-shadow: 0 0 2px 2px blue;
+  }*/ }
+  .contact-form .form-group:nth-child(2), .contact-form .form-group:nth-child(3) {
+    width: 48%;
+    float: left; }
+  .contact-form .form-group:nth-child(3) {
+    float: right; }
+  .contact-form .form-group:nth-child(4) {
+    clear: both;
+    padding-top: 1rem; }
   .contact-form .form-input {
+    /*border: 1px solid #ccc;
+    border-radius: 6px;*/
+    border-bottom: 1px solid #ccc; }
+  .contact-form .form-txtarea {
     border: 1px solid #ccc;
-    border-radius: 6px; }
+    width: 100%;
+    height: 220px; }
 
 .form-button {
-  background-color: #3F51B5;
+  background-color: #f13e36;
   color: #FFFFFF;
-  border: 1px solid #303F9F; }
+  border: 1px solid #f13e36; }
 
 .form-button:hover {
   background-color: #303F9F; }
+
+.call {
+  height: 200px;
+  width: 100%;
+  background-color: #f13e36; }
+  .call h4 {
+    width: 30%;
+    float: left;
+    font-size: 1.5em;
+    color: #fff;
+    margin-top: 7px; }
+  .call form {
+    width: 60%;
+    float: right; }
+  .call .form-input {
+    opacity: .6;
+    margin-right: 20px; }
+  .call .btn {
+    background-color: #fff;
+    color: #f13e36; }
+
+.contact-badge {
+  width: 250px; }
+  .contact-badge img {
+    width: 120px; }
+
+.form-txtarea {
+  padding: 1em;
+  font-size: 1.1em; }
+
+.contact-form * {
+  font-family: 'montserrat'; }
 
 @media screen and (max-width: 420px) {
   .contact {
@@ -3366,7 +3432,7 @@ img.portImg, div.bx-wrapper {
 .footer {
   background-color: #323232;
   position: relative;
-  height: calc(70vh + 18px);
+  height: calc(50vh + 18px);
   color: #fff;
   font-size: 1.1em; }
 
@@ -3380,12 +3446,10 @@ img.portImg, div.bx-wrapper {
   z-index: 1; }
 
 .map-container {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: block;
   border: 0;
   width: 100%;
-  height: calc( 70vh - 2px ); }
+  height: 400px; }
 
 .footer-container {
   position: relative;
