--- a/src/scss/framework/_forms.scss
+++ b/src/scss/framework/_forms.scss
@@ -4,12 +4,12 @@
 
 .form-group {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
 }
 
 .form-input {
     // height: 46px;
-    width: calc(100% - 32px);
+    width: 100%;//calc(100% - 32px);
     //min-width: ;
     box-shadow: none;
     outline: none;
