--- a/src/scss/layouts/_contact.scss
+++ b/src/scss/layouts/_contact.scss
@@ -2,15 +2,35 @@
     padding-top: 3rem;
     padding-bottom: 7rem;
 }
-
+.contact-wrapp {
+    width: 90%
+}
 .contact-form {
-    width: 65%;
+    width: 100%;
     padding: 1rem 2rem;
-    
+    .form-group:nth-child(2), .form-group:nth-child(3){
+        width: 48%;
+        float: left;
+    }
+    .form-group:nth-child(3){
+        float: right;
+    }
+    .form-group:nth-child(4) {
+        clear: both;
+        padding-top: 1rem;
+    }
     .form-input {
+        /*border: 1px solid #ccc;
+        border-radius: 6px;*/
+        border-bottom: 1px solid #ccc;
+    }
+    .form-txtarea {
         border: 1px solid #ccc;
-        border-radius: 6px;
-    }/*
+        width: 100%;
+        height: 220px;
+    }
+
+    /*
     .form-input:active {
         box-shadow: 0 0 2px 2px blue;
     }*/
@@ -18,15 +38,55 @@
 
 
 .form-button {
-	background-color: $primary-color;
+	background-color: #f13e36;
 	color: $primary-color-text;
-	border: 1px solid $primary-color-dark;
+	border: 1px solid #f13e36;
 	//box-shadow: 0 0 5px rgba(0,0,0,.65);
 }
 
 .form-button:hover {
 	background-color: $primary-color-dark;
 	//box-shadow: 0 0 10px rgba(0,0,0,.65);
+}
+.call {
+    height: 200px;
+    width: 100%;
+    background-color: #f13e36;
+
+    h4 {
+        width: 30%;
+        float: left;
+
+        font-size: 1.5em;
+        color: #fff;
+        margin-top: 7px;
+    }
+    form {
+        width: 60%;
+        float: right;
+    }
+    .form-input {
+        opacity: .6;
+        margin-right: 20px;
+    }
+    .btn {
+        background-color: #fff;
+        color: #f13e36;
+    }
+}
+.contact-badge {
+    width: 250px;
+
+    img {
+        width: 120px;
+    }
+}
+.form-txtarea {
+    padding: 1em;
+    font-size: 1.1em;
+}
+.contact-form * {
+    font-family: 'montserrat';
 }
 
 @media screen and (max-width: 420px) {
