--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	background-color: rgb(50,50,50);
 	position: relative;
-	height: calc(70vh + 18px);
+	height: calc(50vh + 18px);
 	color: $white;
 	font-size: 1.1em;
 	@extend %flex;
@@ -16,12 +16,14 @@
 	z-index: 1;
 }
 .map-container {
-	position: absolute;
-	top: 0;
-	left: 0;
+	//position: absolute;
+	//top: 0;
+	//left: 0;
+	display: block;
 	border: 0;
 	width: 100%;
-	height: calc( 70vh - 2px );
+	height: 400px;
+	//height: calc( 70vh - 2px );
 }
 .footer-container {
 	position: relative;
