fixes contact portfolio

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -40,7 +40,7 @@
 				<figure class="contact-badge text-center">
 					<img src="res/img/Buzon-01.png" alt="">
 					<figcaption>
-						<b>Escribinos</b>
+						<b>Escríbenos</b>
 						<p>contacto@bmarkt.studio</p>
 					</figcaption>
 				</figure>
