--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -22,26 +22,26 @@
 				</div>
 			</form>
 			
-			<div class="flex row-elements_between">
+			<div class="flex row-elements_between mont">
 				<figure class="contact-badge text-center">
 					<img src="res/img/Telefono-01.png" alt="">
 					<figcaption>
-						<b>Llámanos</b>
-						<p>(+505) 8853 9870</p>
+						<b class="mont">Llámanos</b>
+						<p class="mont">(+505) 8853 9870</p>
 					</figcaption>
 				</figure>
 				<figure class="contact-badge text-center">
 					<img src="res/img/Mapa-01.png" alt="">
 					<figcaption>
-						<b>Visitanos</b>
-						<p>Semáforo viejo 1 1/2 cuadras al norte Estelí, Nic.</p>
+						<b class="mont">Visitanos</b>
+						<p class="mont">Semáforo viejo 1 1/2 cuadras al norte Estelí, Nic.</p>
 					</figcaption>
 				</figure>
 				<figure class="contact-badge text-center">
 					<img src="res/img/Buzon-01.png" alt="">
 					<figcaption>
-						<b>Escríbenos</b>
-						<p>contacto@bmarkt.studio</p>
+						<b class="mont">Escríbenos</b>
+						<p class="mont">contacto@bmarkt.studio</p>
 					</figcaption>
 				</figure>
 			</div>
@@ -51,11 +51,11 @@
 </div>
 <div class="row call row-content-center_vertical">
 	<div class="row-content_medium">
-		<h4>Solicitá una llamada</h4>
-		<form class="flex flex-row">
+		<h4 class="mont">Solicitá una llamada</h4>
+		<form class="flex flex-row mont">
 			<input class="form-input" type="text" placeholder="Nombre Completo">
 			<input class="form-input" type="text" placeholder="Número Telefónico">
-			<button class="btn"> Enviar </button>
+			<button class="btn mont"> Enviar </button>
 		</form>		
 	</div>
 </div>
