--- a/src/scss/layouts/_contact.scss
+++ b/src/scss/layouts/_contact.scss
@@ -8,6 +8,7 @@
 .contact-form {
     width: 100%;
     padding: 1rem 2rem;
+    margin-bottom: 3rem; 
     .form-group:nth-child(2), .form-group:nth-child(3){
         width: 48%;
         float: left;
