--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -25,7 +25,7 @@
 			</figure>
 			<figure class="modal-project element-item design">
 			  <img src="res/img/portfolio/diseno/logos/mundo/Portada.png" alt="img-porfolio">
-			  <figcaption href="" class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'gasmarket'})">
+			  <figcaption href="" class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'mundo'})">
 			  	<p>Mundo Ret a Car</p>
 			  </figcaption>
 			</figure>
@@ -60,7 +60,7 @@
 			  </figcaption>
 			</figure>
 			<figure class="modal-project element-item branding">
-			  <img src="res/img/portfolio/diseno/logos/youralsguide/your-als-guide-logo.jpg" alt="img-porfolio">
+			  <img src="res/img/portfolio/diseno/logos/youralsguide/Portada-01.png" alt="img-porfolio">
 			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'your-als-guide'})">
 			  	<p>Your ALS Guide</p>
 			  </figcaption>
@@ -86,7 +86,7 @@
 			</figure>
 			<figure class="modal-project element-item branding">
 				<img src="res/img/portfolio/diseno/branding/jaliskos/Portada.jpg" alt="img-portfolio">
-				<figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'tafenic'})">
+				<figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'jaliskos'})">
 					<p>Jalisko's</p>
 				</figcaption>
 			</figure>
