--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,5 +1,8 @@
 <div class="banner">
-    <img class="lazy" data-original="res/img/banner.png" alt="banner home">
+    <h1 class="mont">EL <span class="red">PUNTO</span> DE PARTIDA PARA EL ÉXITO DE TUS SUEÑOS</h1>
+    <!-- <h1 class="mont">THE STARTER <span class="red">POINT</span> FOR THE SUCCESS OF YOURS DREAMS</h1> -->
+    <!-- <img class="lazy" data-original="res/img/banner.png" alt="banner home"> -->
+    
     <!--<div class="row-content row-content_medium row-elements_between flex-center">
         
         <h1>MAKE...<br> <span class="typing"></span></h1>
@@ -10,6 +13,9 @@
     <div class="about row-content row-content_medium row-content_column row-content-center_vertical">
 
         <img class="lazy banner-team" data-original="res/img/Banner2.png" alt="banner team">
+        <!-- <p>Bmarkt studio (una compañia de internet) es una Agencia de transformacion digital
+        para empresas de la región; que se reinventa constantemente a si mísma para brindar
+        una experiencia de crecimiento con un equipo multidisciplinario</p> -->
     <!--    <div class="logo-red-ball"></div>
         <hr>
         <p class="info-text text-center">
