--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -26,7 +26,7 @@
                 <a href="/" class="social-icon"><i class="fa fa-instagram " aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-linkedin " aria-hidden="true"></i></a>
                 <a href="/" class="social-icon"><i class="fa fa-behance " aria-hidden="true"></i></a>
-                <a href="/" class="social-icon"><i class="fa fa-github " aria-hidden="true"></i></a>
+                <!-- <a href="/" class="social-icon"><i class="fa fa-github " aria-hidden="true"></i></a> -->
             </div>
         </div>
     </div>
