--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,7 +1,11 @@
 .footer {
 	background-color: rgb(50,50,50);
-	position: relative;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	z-index: -9999;
 	height: calc(50vh + 18px);
+	width: 100%;
 	color: $white;
 	font-size: 1.1em;
 	@extend %flex;
