--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -10,7 +10,7 @@
     width: 100%;
     background-color: #fff;//#fafafa;
     transition: .6s ease all;
-    //box-shadow: 0 0 5px 8px rgba(0, 0, 0, .3);
+    //box-shadow: 0 0 3px 3px rgba(0, 0, 0, .3);//0 0 5px 8px rgba(0, 0, 0, .3);
     #{&}-container {
         width: 80%;
         padding-top: 15px;
@@ -21,12 +21,15 @@
     @extend %flex;
     @extend %flex-center_horizontal;
 }
-
+.shadow {
+  box-shadow: 0 0 3px 3px rgba(0, 0, 0, .3); 
+}
 .logo {
     width: 170px;
 }
 .bgt {
   background-color: transparent;
+  box-shadow: none;
   a.link{
     color: #fff;  
   }
