--- a/src/scss/layouts/_service.scss
+++ b/src/scss/layouts/_service.scss
@@ -12,7 +12,7 @@
 }
 
 h2.service-title{
-    color: #fafafa;
+    color: #fafafa; //#323232
     width: 70%;
     text-align: center;
     font-size: 3.3em;
@@ -29,8 +29,14 @@ h2.service-title{
 }
 
 .service-container {
-    width: 30%;
+    width: 31%;
     margin-bottom: 2rem;
+    //border: 1px solid black;
+    box-shadow: 1px 0 1px 1px rgba(0, 0, 0, .5);
+
+    figcaption {
+        padding: 15px
+    }
 }
 
 .service-img {
