--- a/src/scss/layouts/_wedo.scss
+++ b/src/scss/layouts/_wedo.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     //height: 100vh;
-    width: 80%;
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -98,6 +98,7 @@
     
     .service-description {
         margin-bottom: 1rem;
+        padding: 0 10px;
     }
 
     .service-description-container h3 {
