contact view responsive

--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -22,10 +22,10 @@
             </div>
             <div class="social">
                 <a target="_blank" href="https://www.facebook.com/bmarkt.studio.nic/" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="/" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                <a href="/" class="social-icon"><i class="fa fa-instagram " aria-hidden="true"></i></a>
-                <a href="/" class="social-icon"><i class="fa fa-linkedin " aria-hidden="true"></i></a>
-                <a href="/" class="social-icon"><i class="fa fa-behance " aria-hidden="true"></i></a>
+                <a target="_blank" href="https://twitter.com/bmarkts" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a target="_blank" href="https://www.instagram.com/bmarktstudio/" class="social-icon"><i class="fa fa-instagram " aria-hidden="true"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/company/26999867/" class="social-icon"><i class="fa fa-linkedin " aria-hidden="true"></i></a>
+                <a target="_blank" href="https://www.behance.net/bmarktstudio" class="social-icon"><i class="fa fa-behance " aria-hidden="true"></i></a>
                 <!-- <a href="/" class="social-icon"><i class="fa fa-github " aria-hidden="true"></i></a> -->
             </div>
         </div>
