--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -5,7 +5,7 @@
 	    	<p class="text-center montserrat">Esto es bastante simple, solo responde algunas preguntas <br> sobre vos y tu proyecto, nosotros haremos el resto.</p>
 	        
 	        <form class="contact-form">
-				<div class="form-group">
+				<div class="form-group line-active">
 					<input type="text" class="form-input" placeholder="Nombre*" data-ng-model="$ctrl.mailObj.name">
 				</div>
 				<div class="form-group">
@@ -22,7 +22,7 @@
 				</div>
 			</form>
 			
-			<div class="flex row-elements_between mont">
+			<div class="flex row-elements_between mont contact-info">
 				<figure class="contact-badge text-center">
 					<img src="res/img/Telefono-01.png" alt="">
 					<figcaption>
