--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner flex flex-center_vertical">
     <h1 class="mont">EL <span class="red">PUNTO</span> DE PARTIDA PARA EL ÉXITO DE TUS SUEÑOS</h1>
     <!-- <h1 class="mont">THE STARTER <span class="red">POINT</span> FOR THE SUCCESS OF YOURS DREAMS</h1> -->
     <!-- <img class="lazy" data-original="res/img/banner.png" alt="banner home"> -->
