--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -83,14 +83,14 @@
                 <a href="" ui-sref="servicio({service: 'arquitectura'})"></a>
             </figcaption>
         </figure>
-        <div class="service-description">
+        <!-- <div class="service-description">
             <div class="service-description-container">
                 <a href="" ui-sref="servicio({service: 'arquitectura'})"><h2>Arquitectura</h2></a>
                 <p class="paragraph">
                     Conocemos la importancia de satisfacer las necesidades de infraestructura, para el desarrollo laboral, personal y familiar en la sociedad, a través de servicios integrales de arquitectura, generando espacios inteligentes, confortables y visualmente agradables, fieles a las preferencias y necesidades del cliente. <a href="" ui-sref="servicio({service: 'arquitectura'})"><i>ver más...</i></a>
                 </p>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 
