--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -14,9 +14,9 @@
 			<h3>MARKETING</h3>
 		</a>
 	</div>
-	<div class="service">
+	<!-- <div class="service">
 		<a ui-sref="servicio({service: 'arquitectura'})" class="services-container">
 			<h3>ARQUITECTURA</h3>
 		</a>
-	</div>
+	</div> -->
 </div>
